--- a/Css/style.css
+++ b/Css/style.css
@@ -2571,3 +2571,37 @@ li {
   color: #fff;
   margin-left: 12px;
 }
+
+._3hMIKUaq-ANswvuxWaMAfz {
+  padding-top: 32px;
+  justify-content: center;
+  cursor: pointer;
+}
+._1bg-3j4DyVb_Cg7yoh1Let {
+  display: flex;
+  flex-direction: column;
+}
+._2eI_bbHCWG4Xotp-v_qaGt {
+  font-size: 16px;
+  font-weight: 400;
+  letter-spacing: 0.69px;
+  text-align: left;
+  color: #7e7e8c;
+}
+._8S98Q-rRAWl5EFaGEiejs {
+  width: 185px;
+  height: 40px;
+  background-color: #f8f4f4;
+  margin-top: 12px;
+  justify-content: center;
+  border: 1px solid #465986;
+  border-radius: 3px;
+}
+._1PWZAhUPf-4UD5koGTR5jq {
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 1.67;
+  letter-spacing: 1.5px;
+  text-align: center;
+  color: #455888;
+}
